Update to fix gaps between input fields etc.

--- a/dcc-webapp/src/main/dccweb/src/styles.css
+++ b/dcc-webapp/src/main/dccweb/src/styles.css
@@ -3,3 +3,7 @@
 .leftGap {
   margin-left: 0.5rem;
 }
+
+.rightGap {
+  margin-right: 0.5rem;
+}
